hphp/hack/test/typecheck/reified_generics/method_soft_reification.php.exp
File "method_soft_reification.php", line 21, characters 3-15:
All type arguments must be specified because a type parameter is reified (Typing[4303])
  File "method_soft_reification.php", line 7, characters 19-25:
  Definition is here
File "method_soft_reification.php", line 22, characters 15-17:
The type argument at index 0 is not reified (Typing[4302])
  File "method_soft_reification.php", line 7, characters 33-33:
  Its definition T is reified
